Dogaya kanat actik kirilim

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/VRTemplate/Galataport/Levels/MainMap.MainMap
+GameDefaultMap=/Game/VRTemplate/Galataport/Levels/_TEST_._TEST_
 EditorStartupMap=/Game/VRTemplate/Galataport/Levels/MainMap.MainMap
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
